# Configuration file for the Python project

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "project_name"
version = "0.1.0"
description = "A brief description of the project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "dependency1",
    "dependency2"
]

[tool.poetry]
name = "project_name"
version = "0.1.0"
description = "A brief description of the project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dependency1 = "^1.0"
dependency2 = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[project.scripts]
start = "app:main"
